test/TestPhases/namecheck/invalid/structs.blc
module



struct S      
end

// with
enum E 
    A 
extension
    function f()
        var x: E
        var y: S
        isA(x, y)          // wrong
    end

    function isA(x: E, y: S) returns bool
        E.f()          // correct
    end
end

function f()
    var x: E
end

function isA(x: E, y: S) returns bool
    E.f()          // wrong
end
            

// end
